<resources>
    <string name="app_name">Flight</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="login_successful">Login successful</string>
    <string name="signup_successful">Signup successful</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_confirm_password_required">Please confirm your password</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_fill_all_fields">Please fill all fields</string>
</resources>